return 변수병 복구

--- a/_posts/2021-04-13-return.md
+++ b/_posts/2021-04-13-return.md
@@ -6,8 +6,8 @@ categories:
 
 ## return
 ```js
-let test = function(){
-    let x = 1;
+var test = function(){
+    var x = 1;
 }
 test();
 // 이 함수를 실행 할 경우 undefined가 도출됨
@@ -18,8 +18,8 @@ test();
 
 ## 값을 반환하는데 사용하는 return
 ```js
-let test2 = function(){
-    let x = 1;
+var test2 = function(){
+    var x = 1;
     return x;
 }
 test2();
@@ -30,8 +30,8 @@ test2();
 ## 중간에 중지시키는데 사용하는 return
 ```js
 //return은 현재 구문을 중지하고 빠져나오는(escape) 방법으로 사용이 가능함
-let test3 = function (){
-    let x = 1;
+var test3 = function (){
+    var x = 1;
     if (x == 1) {
        return x; // 1
     }
@@ -42,8 +42,8 @@ test3();
 
 ## return을 마지막에 넣어 줄 경우
 ```js
-let test4 = function (){
-    let x = 1;
+var test4 = function (){
+    var x = 1;
     x = x + 1;
     return x; //2
 }
