--- a/_posts/2021-04-13-return.md
+++ b/_posts/2021-04-13-return.md
@@ -55,8 +55,10 @@ test4();
 return true;
 return false;
 ```
+**return뒤에 아무거나 올 수 있음, false를 돌려주는것,반환,리턴**
+
 
 ## 반환할 경우가 없을때
 ```js
-return;
+return; //함수 내에서 사용, 밑에것 활성화 방지
 ```
