--- a/_posts/2021-04-13-return.md
+++ b/_posts/2021-04-13-return.md
@@ -54,8 +54,8 @@ test4();
 ```js
 return true;
 return false;
+// return뒤에 아무거나 올 수 있음, false를 돌려주는것,반환,리턴
 ```
-**return뒤에 아무거나 올 수 있음, false를 돌려주는것,반환,리턴**
 
 
 ## 반환할 경우가 없을때
